<resources>
    <string name="app_name">challenge_4_ilyasa_adam_naufal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai_ilyasa">Hai, Ilyasa</string>
    <string name="discount_picture">DISCOUNT PICTURE</string>
    <string name="promo_banner">PROMO BANNER</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="discount_banner">DISCOUNT BANNER</string>
    <string name="pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu">Pesan makanan dengan aplikasi dan dapatkan diskonmu</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="todo">TODO</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="_62_8">+62: 8</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="your_mail_com">your@mail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invisible">invisible</string>
    <string name="cart">Cart</string>

    <string name="pesan">Pesan</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="quantity">Quantity</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="delivery">Delivery</string>
    <string name="cash">Cash</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="take_away">Take Away</string>
    <string name="login">login</string>
    <string name="register_login">register_login</string>
    <string name="forgot_your_password">forgot_your_password</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="username_login">username_login</string>
    <string name="et_password">password</string>
    <string name="login_user">login_user</string>
    <string name="register">register</string>
    <string name="your_email">your email</string>
    <string name="your_password">your_password</string>
    <string name="yourb_username">yourb username</string>
    <string name="already_have_an_account">already have an account</string>
</resources>